add:Get Stats-chain,contract,txs
